Fix schedule alignment
This commit makes sure that all the times in the table are aligned under
one another in different rows. This makes the schedule more easy to
read, because the times aren't in a different position per row.

Also make sure every column doesn't use more space than it needs to and
has enough space on mobile.

--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -299,10 +299,20 @@
           table {
             border-collapse: collapse;
             width: 100%;
+            .time {
+              min-width: 125px;
+            }
+            .event {
+              width: 80%;
+            }
             tbody {
               tr {
                 &:nth-child(odd) {
                   background: #e5ebec;
+                }
+                > td {
+                  font-feature-settings: "tnum";
+                  font-variant-numeric: tabular-nums;
                 }
                 td {
                   border: solid 1px rgba(136,166,200,0.43);
@@ -324,7 +334,7 @@
             margin-bottom: 40px;
           }
           .day-1, .day-2 {
-            width: auto;
+            width: 100%;
           }
         }
       }
